--- a/frontend/cute-blog-vanillajs/styles/common/common.css
+++ b/frontend/cute-blog-vanillajs/styles/common/common.css
@@ -1,56 +1,68 @@
 html {
-    background: #F5F5F5;
+  background: #f5f5f5;
+}
+
+.section-wrapper {
+  background: #fff;
 }
 
 input {
-    border-radius: 3px;
-    border: 1px solid #DDDDDD;
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    color: #FB7299;
-    padding-left: 10px;
-    padding-right: 10px;
-    outline: none
+  border-radius: 3px;
+  border: 1px solid #dddddd;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  color: #fb7299;
+  padding-left: 10px;
+  padding-right: 10px;
+  outline: none;
 }
 
 input:focus {
-    border-color: #FB7299;
+  border-color: #fb7299;
 }
 
 ::-webkit-input-placeholder {
-    /* WebKit browsers */
-    color: #999;
-    font-size: 16px;
+  /* WebKit browsers */
+  color: #999;
+  font-size: 16px;
 }
 
- ::-moz-placeholder {
-    /* Mozilla Firefox 19+ */
-    color: #999;
-    font-size: 16px;
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #999;
+  font-size: 16px;
 }
 
- :-ms-input-placeholder {
-    /* Internet Explorer 10+ */
-    color: #999;
-    font-size: 16px;
+:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: #999;
+  font-size: 16px;
 }
 
 button {
-    height: 40px;
-    line-height: 40px;
-    border: none;
-    border-radius: 3px;
-    background: #FB7299;
-    color: #fff;
-    outline: none;
-    cursor: pointer;
-    /* box-shadow: 0 2px 10px 0 #e65c83; */
-    box-shadow: 1px 2px 1px 2px #e65c83;
-    ;
+  height: 40px;
+  line-height: 40px;
+  border: none;
+  border-radius: 3px;
+  background: #fb7299;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+  /* box-shadow: 0 2px 10px 0 #e65c83; */
+  box-shadow: 1px 2px 1px 2px #e65c83;
 }
 
 button:active {
-    /* background: #e65c83; */
-    transform: translateY(1px);
+  /* background: #e65c83; */
+  transform: translateY(1px);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
 }
