--- a/frontend/cute-blog-vanillajs/styles/common/common.css
+++ b/frontend/cute-blog-vanillajs/styles/common/common.css
@@ -1,9 +1,39 @@
 html {
   background: #f5f5f5;
+  font-family: -apple-system,system-ui,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial;
+  word-break: break-word;
+  text-rendering: optimizeLegibility;
 }
 
 .section-wrapper {
   background: #fff;
+}
+
+/* 顶部导航栏 */
+.top-nav {
+  height: 60px;
+  line-height: 60px;
+  background: #fff;
+  border-bottom: 1px solid #eee;
+}
+
+.top-nav .logo {
+  position: absolute;
+  width: 60px;
+  height: 49px;
+  margin-left: 40px;
+}
+
+.nav-wrapper {
+  /* display: inline-block; */
+  width: 1080px;
+  margin: auto;
+  vertical-align: top;
+}
+
+.nav-item {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 input {
@@ -40,7 +70,7 @@ input:focus {
   font-size: 16px;
 }
 
-button {
+.cute-btn {
   height: 40px;
   line-height: 40px;
   border: none;
@@ -53,7 +83,7 @@ button {
   box-shadow: 1px 2px 1px 2px #e65c83;
 }
 
-button:active {
+.cute-btn:active {
   /* background: #e65c83; */
   transform: translateY(1px);
 }
