--- a/frontend/cute-blog-vanillajs/styles/common/normalize.css
+++ b/frontend/cute-blog-vanillajs/styles/common/normalize.css
@@ -394,6 +394,6 @@ h4,
 h5,
 h6,
 p {
-  margin-block-start: 0.5em;
-  margin-block-end: 0.5em;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
