--- a/frontend/cute-blog-vanillajs/styles/pages/article.css
+++ b/frontend/cute-blog-vanillajs/styles/pages/article.css
@@ -21,6 +21,7 @@
   vertical-align: top;
 }
 
+/* 文章 */
 .section-article {
   padding: 20px 25px 25px 25px;
 }
@@ -86,9 +87,96 @@
   margin-top: 20px;
 }
 
-.article-content p{
-    font-size: 14px;
-    color: #333;
-    line-height: 1.7;
-    margin-top: 20px;
+.article-content p {
+  font-size: 14px;
+  color: #333;
+  line-height: 1.7;
+  margin-top: 20px;
+}
+
+/* 评论 */
+.section-comment {
+  margin-top: 12px;
+  padding: 35px 25px 35px 35px;
+}
+
+.avatar-wrapper {
+  float: left;
+  width: 40px;
+  height: 40px;
+}
+
+.avatar-wrapper img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.comment-input-wrapper {
+  overflow: hidden;
+  padding-left: 12px;
+}
+
+.input-comment {
+  padding: 10px;
+  height: 60px;
+  resize: none;
+  color: #333;
+}
+
+.row-btn {
+  text-align: right;
+  margin-top: 10px;
+}
+
+.cute-btn-small {
+  border-radius: 3px;
+  border: 1px solid #fb7299;
+  border-radius: 20px;
+  padding: 3px 10px;
+  background: #fb7299;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+.cute-btn-gray-plain {
+  border: 1px solid #999;
+  background: #fff;
+  color: #999;
+}
+
+.btn-cancel {
+  margin-left: 10px;
+}
+
+/* 评论列表 */
+.comment-list {
+  padding-left: 20px;
+  margin-top: 25px;
+}
+
+.comment-item {
+  border-bottom: 1px solid #eee;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.comment-avatar {
+  float: left;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+}
+
+.comment-main {
+  padding-left: 35px;
+}
+.row-name {
+  margin-bottom: 5px;
+}
+
+.row-time {
+  margin-bottom: 7px;
+  color: #999;
 }
