feature: static page write)

--- a/frontend/cute-blog-vanillajs/styles/common/common.css
+++ b/frontend/cute-blog-vanillajs/styles/common/common.css
@@ -11,6 +11,10 @@ html {
   padding-bottom: 50px;
 }
 
+.main-wrapper {
+  margin-top: 12px;
+}
+
 .section-wrapper {
   background: #fff;
 }
@@ -103,4 +107,13 @@ a {
 
 a:visited {
   color: inherit;
+}
+
+.cute-tag {
+  padding: 10px 16px;
+  font-size: 14px;
+  border: 1px solid #999;
+  border-radius: 4px;
+  color: #777;
+  cursor: pointer;
 }
