--- a/frontend/cute-blog-vanillajs/styles/common/common.css
+++ b/frontend/cute-blog-vanillajs/styles/common/common.css
@@ -32,18 +32,25 @@ html {
   width: 60px;
   height: 49px;
   margin-left: 40px;
+  top: 6px;
 }
 
 .nav-wrapper {
   /* display: inline-block; */
-  width: 1080px;
+  width: 1020px;
   margin: auto;
   vertical-align: top;
+  cursor: pointer;
+}
+
+.top-nav a.nav-item_active {
+  color: #fb7299;
 }
 
 .nav-item {
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
+  margin-right: 50px;
 }
 
 input,
