feature: page profile

--- a/frontend/cute-blog-vanillajs/styles/common/common.css
+++ b/frontend/cute-blog-vanillajs/styles/common/common.css
@@ -65,11 +65,66 @@ html {
   padding-right: 10px;
   line-height: 1;
 }
-.nav-btn-write span{
+.nav-btn-write span {
   vertical-align: middle;
 }
 .icon-btn {
   font-size: 18px;
+}
+
+/* 作者：头像和信息、关注按钮 */
+/* 知识点：左边固定，右边填满剩余的空间 */
+/* 知识点：垂直居中 */
+.author-wrapper {
+  height: 45px;
+  line-height: 45px;
+}
+.img-wrapper {
+  float: left;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+
+.author-avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.info-wrapper {
+  overflow: hidden;
+  padding-left: 10px;
+  line-height: 1;
+  vertical-align: middle;
+}
+
+.info-wrapper .name {
+  font-size: 14px;
+  font-weight: bold;
+  color: #333;
+}
+
+.btn-follow {
+  height: 20px;
+  line-height: 20px;
+  width: auto;
+  padding: 0 10px;
+  border: 1px solid #fa7199;
+  color: #fa7199;
+  background: #fff;
+  border-radius: 10px;
+  margin-left: 16px;
+}
+.info-wrapper .row-time {
+  color: #999;
+  margin-top: 10px;
+}
+
+.info-wrapper .row-desc {
+  color: #999;
+  margin-top: 5px;
 }
 
 input,
